syntax = "proto3";

package sudokuapi;

service Puzzler {
  rpc GetPuzzle (PuzzleID) returns (Puzzle);
  rpc GetStats (StatsQuery) returns (Stats);
  rpc CreatePuzzle (Puzzle) returns (Puzzle);
}

message StatsQuery {}

message PuzzleID {
  string uuid = 1;
}

message Puzzle {
  string uuid = 1;
  repeated uint32 cell = 2;
}

message Stats {
  uint64 count = 1;
}
